--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.1.0",
     "react-redux": "^7.2.4",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
