--- a/package.json
+++ b/package.json
@@ -3,28 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "latest",
-    "@popperjs/core": "latest",
-    "@testing-library/jest-dom": "latest",
-    "@testing-library/react": "latest",
-    "@testing-library/user-event": "latest",
-    "bootstrap": "latest",
-    "cors": "latest",
-    "leaflet": "latest",
-    "node-sass": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "react-leaflet": "latest",
-    "react-range": "latest",
-    "react-redux": "latest",
-    "react-router": "latest",
-    "react-router-dom": "latest",
-    "react-scripts": "latest",
-    "react-select": "latest",
-    "redux": "latest",
-    "redux-devtools-extension": "latest",
-    "redux-thunk": "latest",
-    "web-vitals": "latest"
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@popperjs/core": "^2.9.2",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.0.1",
+    "leaflet": "^1.7.1",
+    "node-sass": "^6.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-leaflet": "^3.1.0",
+    "react-range": "^1.8.8",
+    "react-redux": "^7.2.4",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
@@ -38,10 +37,16 @@
       "react-app/jest"
     ]
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not op_mini all"
-  ],
-  "packageManager": "yarn@3.2.1"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
